force-app/main/default/objects/slackv2__Subscription_Type__c/slackv2__Subscription_Type__c.object-meta.xml
<CustomObject>
    <label>Subscription Type</label>
    <nameField>
        <label>Subscription Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>