force-app/main/default/objects/slackv2__Subscription_Type__c/fields/slackv2__Activity_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Activity_Api_Name__c</fullName>
    <label>Activity Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>