force-app/main/default/objects/slackv2__Subscription_Type__c/fields/slackv2__Displayable__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Displayable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Displayable</label>
    <type>Checkbox</type>
</CustomField>