force-app/main/default/objects/slackv2__Subscription_Type__c/fields/slackv2__Order__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Order__c</fullName>
    <label>Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>