force-app/main/default/objects/slackv2__Subscription_Type__c/fields/slackv2__Standard_Type_ENUM__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Standard_Type_ENUM__c</fullName>
    <label>Standard Type ENUM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>