force-app/main/default/objects/slackv2__Subscription_Type__c/fields/slackv2__Subscription_Object__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Subscription_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription Object</label>
    <referenceTo>slackv2__Subscription_Object__c</referenceTo>
    <relationshipName>Subscription_Types</relationshipName>
    <type>Lookup</type>
</CustomField>