force-app/main/default/objects/slackv2__Subscription_Type__c/fields/slackv2__User_Defined__c.field-meta.xml
<CustomField>
    <fullName>slackv2__User_Defined__c</fullName>
    <defaultValue>true</defaultValue>
    <label>User Defined</label>
    <type>Checkbox</type>
</CustomField>